attempt to fix MID-1580

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/AccountOperationButtons.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/AccountOperationButtons.html
@@ -17,10 +17,8 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-	<a wicket:id="unlink"><img wicket:message="title:prismOperationButtonPanel.unlink"
-		class="objectFormHeaderControllButton objectFormHeaderButtonUnLink" wicket:id="unlinkImg" /> </a>
-	<a wicket:id="delete"><img wicket:message="title:prismOperationButtonPanel.delete"
-		class="objectFormHeaderControllButton objectFormHeaderButtonDelete" wicket:id="deleteImg" />
+	<a wicket:id="unlink"><img class="objectFormHeaderControllButton objectFormHeaderButtonUnLink" wicket:id="unlinkImg" /> </a>
+	<a wicket:id="delete"><img class="objectFormHeaderControllButton objectFormHeaderButtonDelete" wicket:id="deleteImg" />
 	</a>
 </wicket:panel>
 </html>
