--- a/gui/admin-gui/src/main/webapp/css/easy-pie-chart/jquery.easypiechart.css
+++ b/gui/admin-gui/src/main/webapp/css/easy-pie-chart/jquery.easypiechart.css
@@ -1,10 +1,31 @@
-.easyPieChart {
+div.chart {
+    display: inline-block;
+    height: 90px;
     position: relative;
     text-align: center;
+    width: 90px;
 }
 
-.easyPieChart canvas {
+div.chart canvas {
     position: absolute;
     top: 0;
     left: 0;
+}
+
+div.chart span.value {
+    line-height: 90px;
+    z-index: 2;
+}
+
+div.chart span.value:after {
+    margin-left: 0.1em;
+    font-size: 0.7em;
+}
+
+div.chart span.value-percent:after {
+    content: '%';
+}
+
+div.chart span.value-mb:after {
+    content: 'MB';
 }
