--- a/gui/admin-gui/src/main/webapp/reports/reportReconciliation.jrxml
+++ b/gui/admin-gui/src/main/webapp/reports/reportReconciliation.jrxml
@@ -4,16 +4,12 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="2"/>
 	<property name="net.sf.jasperreports.awt.ignore.missing.font" value="true"/>
-        <property name="net.sf.jasperreports.export.pdf.force.linebreak.policy" value="true"/>
-	<style name="Title" forecolor="#FFFFFF" fontName="DejaVu Sans" fontSize="50" isBold="false"/>
-	<style name="SubTitle" forecolor="#CCCCCC" fontName="DejaVu Sans" fontSize="18" isBold="false"/>
-	<style name="Column header" mode="Transparent" forecolor="#FFFFFF" backcolor="#333333" fontName="DejaVu Sans" fontSize="12" isBold="true"/>
-	<style name="Detail" mode="Transparent" forecolor="#000000" fontName="DejaVu Sans" fontSize="12" isBold="false"/>
-	<style name="Row" mode="Transparent" fontName="DejaVu Sans" fontSize="12" isBold="false">
-		<conditionalStyle>
-			<style mode="Opaque" backcolor="#F0EFEF"/>
-		</conditionalStyle>
-	</style>
+    <property name="net.sf.jasperreports.export.pdf.force.linebreak.policy" value="true"/>
+	<style name="Title" forecolor="#FFFFFF" fontName="DejaVu Sans" fontSize="26" isBold="true" pdfFontName="DejaVuSans.ttf" pdfEncoding="Identity-H" isPdfEmbedded="true"/>
+	<style name="Page header" forecolor="#000000" fontName="DejaVu Sans" fontSize="12" isBold="true" pdfFontName="DejaVuSans.ttf" pdfEncoding="Identity-H" isPdfEmbedded="true"/>
+	<style name="Column header" mode="Opaque" forecolor="#FFFFFF" backcolor="#333333" fontName="DejaVu Sans" fontSize="12" isBold="true" pdfFontName="DejaVuSans.ttf" pdfEncoding="Identity-H" isPdfEmbedded="true"/>
+	<style name="Detail" isDefault="false" fontName="DejaVu Sans" fontSize="10" pdfFontName="DejaVuSans.ttf" pdfEncoding="Identity-H" isPdfEmbedded="true"/>
+	<style name="Page footer" forecolor="#000000" fontName="DejaVu Sans" fontSize="9" isBold="true" pdfFontName="DejaVuSans.ttf" pdfEncoding="Identity-H" isPdfEmbedded="true"/>
 	<parameter name="LOGO_PATH" class="java.lang.String"/>
 	<parameter name="RESOURCE_OID" class="java.lang.String"/>
 	<parameter name="RESOURCE_NAME" class="java.lang.String"/>
@@ -34,86 +30,74 @@
 	<title>
 		<band height="138" splitType="Stretch">
 			<frame>
-				<reportElement uuid="44bedacc-fa23-4fe1-b71f-e5afa943f553" mode="Opaque" x="0" y="0" width="800" height="67" backcolor="#267994"/>
+				<reportElement uuid="44bedacc-fa23-4fe1-b71f-e5afa943f553" style="Title" mode="Opaque" x="0" y="0" width="800" height="67" backcolor="#267994"/>
 				<staticText>
 					<reportElement uuid="f2d99cad-9d84-4f50-b455-453c87f62c4c" style="Title" x="10" y="13" width="266" height="38"/>
-					<textElement verticalAlignment="Middle">
-						<font fontName="DejaVu Sans" size="26" isBold="true"/>
-					</textElement>
+					<textElement verticalAlignment="Middle"/>
 					<text><![CDATA[Reconciliation Report]]></text>
 				</staticText>
 				<image>
-					<reportElement uuid="b0a76e6a-8f61-4d60-8dcd-3e51adb4cd4c" x="589" y="13" width="203" height="45"/>
+					<reportElement uuid="b0a76e6a-8f61-4d60-8dcd-3e51adb4cd4c" style="Title" x="589" y="13" width="203" height="45"/>
 					<imageExpression><![CDATA[$P{LOGO_PATH}]]></imageExpression>
 				</image>
 			</frame>
 			<staticText>
-				<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" x="2" y="70" width="100" height="20" forecolor="#000000"/>
-				<textElement verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="12" isBold="true"/>
-				</textElement>
+				<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" style="Page header" x="2" y="70" width="100" height="20"/>
+				<textElement verticalAlignment="Middle"/>
 				<text><![CDATA[Resource:]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" x="102" y="70" width="280" height="20" forecolor="#000000"/>
+				<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Page header" x="102" y="70" width="280" height="20"/>
 				<textElement verticalAlignment="Middle">
-					<font size="12" isBold="false"/>
+					<font isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{RESOURCE_NAME}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" x="2" y="90" width="100" height="20" forecolor="#000000"/>
-				<textElement verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="12" isBold="true"/>
-				</textElement>
+				<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" style="Page header" x="2" y="90" width="100" height="20"/>
+				<textElement verticalAlignment="Middle"/>
 				<text><![CDATA[Intent:]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" x="102" y="90" width="150" height="20" forecolor="#000000"/>
+				<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Page header" x="102" y="90" width="150" height="20"/>
 				<textElement verticalAlignment="Middle">
-					<font size="12" isBold="false"/>
+					<font isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{INTENT}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" x="2" y="110" width="100" height="20" forecolor="#000000"/>
-				<textElement verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="12" isBold="true"/>
-				</textElement>
+				<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" style="Page header" x="2" y="110" width="100" height="20"/>
+				<textElement verticalAlignment="Middle"/>
 				<text><![CDATA[Object Class:]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" x="102" y="110" width="150" height="20" forecolor="#000000"/>
+				<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Page header" x="102" y="110" width="150" height="20"/>
 				<textElement verticalAlignment="Middle">
-					<font size="12" isBold="false"/>
+					<font isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{CLASS}.getLocalPart()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" x="400" y="70" width="150" height="20" forecolor="#000000"/>
-				<textElement verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="12" isBold="true"/>
-				</textElement>
+				<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" style="Page header" x="400" y="70" width="150" height="20"/>
+				<textElement verticalAlignment="Middle"/>
 				<text><![CDATA[Report generated on:]]></text>
 			</staticText>
 			<textField pattern="EEEEE dd MMMMM yyyy, HH:mm:ss">
-				<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" x="550" y="70" width="250" height="20" forecolor="#000000"/>
+				<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Page header" x="550" y="70" width="250" height="20"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font size="12" isBold="false"/>
+					<font isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="8599b2c5-3a24-4594-98b9-5b3f38f39e24" x="400" y="90" width="150" height="20" forecolor="#000000"/>
-				<textElement verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="12" isBold="true"/>
-				</textElement>
+				<reportElement uuid="8599b2c5-3a24-4594-98b9-5b3f38f39e24" style="Page header" x="400" y="90" width="150" height="20"/>
+				<textElement verticalAlignment="Middle"/>
 				<text><![CDATA[Number of records:]]></text>
 			</staticText>
 			<textField evaluationTime="Report" isBlankWhenNull="true">
-				<reportElement uuid="f6b01016-2406-4195-8b3b-35dca232ce68" x="550" y="90" width="250" height="20" forecolor="#000000"/>
+				<reportElement uuid="f6b01016-2406-4195-8b3b-35dca232ce68" style="Page header" x="550" y="90" width="250" height="20"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font size="12" isBold="false"/>
+					<font isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
@@ -125,24 +109,24 @@
 	<columnHeader>
 		<band height="24" splitType="Stretch">
 			<frame>
-				<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" style="SubTitle" mode="Transparent" x="0" y="1" width="800" height="19" isRemoveLineWhenBlank="true"/>
+				<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" style="Column header" mode="Transparent" x="0" y="1" width="800" height="19" isRemoveLineWhenBlank="true"/>
 				<staticText>
-					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" mode="Opaque" x="0" y="0" width="300" height="18"/>
+					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="0" y="0" width="300" height="18"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Name]]></text>
 				</staticText>
 				<staticText>
-					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" mode="Opaque" x="300" y="0" width="150" height="18"/>
+					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="300" y="0" width="150" height="18"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Situation]]></text>
 				</staticText>
 				<staticText>
-					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" mode="Opaque" x="450" y="0" width="200" height="18"/>
+					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="450" y="0" width="200" height="18"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Owner]]></text>
 				</staticText>
 				<staticText>
-					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" mode="Opaque" x="650" y="0" width="150" height="18"/>
+					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" x="650" y="0" width="150" height="18"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Timestamp]]></text>
 				</staticText>
@@ -152,7 +136,7 @@
 	<detail>
 		<band height="15" splitType="Stretch">
 			<frame>
-				<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" style="Row" stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="0" width="800" height="14"/>
+				<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" style="Detail" stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="0" width="800" height="14"/>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" stretchType="RelativeToTallestObject" x="0" y="0" width="300" height="13" isPrintWhenDetailOverflows="true"/>
 					<textElement verticalAlignment="Middle"/>
@@ -192,23 +176,23 @@
 	<pageFooter>
 		<band height="32" splitType="Stretch">
 			<frame>
-				<reportElement uuid="fbe8aae4-6500-468a-b1e8-700b569139a1" mode="Transparent" x="0" y="1" width="800" height="24" forecolor="#000000" backcolor="#267994"/>
+				<reportElement uuid="fbe8aae4-6500-468a-b1e8-700b569139a1" style="Page footer" mode="Transparent" x="0" y="1" width="800" height="24" forecolor="#000000" backcolor="#267994"/>
 				<textField>
-					<reportElement uuid="5c062c66-ba45-4288-9dcd-246e28c5af75" style="Column header" x="680" y="1" width="80" height="20" forecolor="#000000"/>
+					<reportElement uuid="5c062c66-ba45-4288-9dcd-246e28c5af75" style="Page footer" x="680" y="1" width="80" height="20"/>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
 						<font size="9" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
 				</textField>
 				<textField pattern="EEEEE dd MMMMM yyyy">
-					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Column header" x="2" y="1" width="197" height="20" forecolor="#000000"/>
+					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Page footer" x="2" y="1" width="197" height="20"/>
 					<textElement verticalAlignment="Middle">
 						<font size="9" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 				</textField>
 				<textField evaluationTime="Report">
-					<reportElement uuid="934b16e8-c3eb-4017-866a-0b7735bf2917" style="Column header" x="760" y="1" width="40" height="20" forecolor="#000000"/>
+					<reportElement uuid="934b16e8-c3eb-4017-866a-0b7735bf2917" style="Page footer" x="760" y="1" width="40" height="20"/>
 					<textElement verticalAlignment="Middle">
 						<font size="9" isBold="true"/>
 					</textElement>
