top menu bar implementation

--- a/gui/admin-gui/src/main/webapp/less/midpoint/top-menu.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/top-menu.less
@@ -1,8 +1,8 @@
 div.navbar {
 
-  min-height: 38px;
-  background-color: @color1;
-  border-bottom-color: darken(@color1, 10%);
+//  min-height: 38px;
+//  background-color: @color1;
+//  border-bottom-color: darken(@color1, 10%);
 
   a.navbar-brand {
 
@@ -18,11 +18,11 @@ div.navbar {
 
   div.navbar-collapse.collapse ul li a.dropdown-toggle,
   a.main-menu-item {
-    font-weight: bold;
-    color: @color2;
+//    font-weight: bold;
+//    color: @color2;
   }
 }
 
 ul.navbar-nav > li > a {
-  padding: 10px 15px;
+//  padding: 10px 15px;
 }
