--- a/gui/admin-gui/src/main/webapp/less/midpoint/top-menu.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/top-menu.less
@@ -1,6 +1,6 @@
 div.navbar {
 
-//  min-height: 38px;
+  min-height: 38px;
 //  background-color: @color1;
 //  border-bottom-color: darken(@color1, 10%);
 
@@ -24,5 +24,5 @@ div.navbar {
 }
 
 ul.navbar-nav > li > a {
-//  padding: 10px 15px;
+  padding: 10px 15px;
 }
