updating base page for all midpoint pages, now it looks real bad :)

--- a/gui/admin-gui/src/main/webapp/css/evolveum.css
+++ b/gui/admin-gui/src/main/webapp/css/evolveum.css
@@ -405,7 +405,7 @@ input:focus, .button:focus, select:focus, option:focus {
 }
 
 .operatingFormButtons .operatingFormBlock .operatingFormText {
-	color: #FFFFFF;
+	/*color: #FFFFFF;*/
     font-size: 12px;
     font-weight: bold;
     margin-right: 3px;
